# betano-api

./: .env.example  .flake8  .gitignore  .gitmodules  betano_poc.py  core.py  docker-compose.yml  main.py  pyproject.toml  storage_state.json  test.py
api/: __init__.py  main.py
api/src/api/: __init__.py  routes.py
api/src/dependencies/: __init__.py  undetected_chrome_driver_dependencies.py
api/src/models/: __init__.py
api/src/routes/: __init__.py  routes.py
api/src/services/: __init__.py  superbet_bot_service.py
api/src/settings/: __init__.py  settings.py
settings/: env.py
src/api/: __init__.py  routes.py
src/dependencies/: __init__.py  undetected_chrome_driver_dependencies.py
src/models/: __init__.py
src/services/: __init__.py  betano_bot_service.py  betano_bot_servie.py  headers.json
worker/: config.py  headers.json  login.json  main.py  processing.py  requirements.txt  utils.py
worker/core/: __init__.py  listener.py  login_assistant.py
worker/settings/: __init__.py  env.py
worker/tasks/: __init__.py  pull_active_players.py  pull_active_tournaments.py  pull_logged_in.py  push_bets.py
