[tool.poetry]
name = "betano-api"
version = "0.1.0"
description = ""
authors = ["Marcos Pereira"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.5"
notebook = "^7.2.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
fastapi = {extras = ["standard"], version = "^0.115.2"}
email-validator = "^2.2.0"
chromedriver-py = "^129.0.6668.100"
pytest-playwright = "^0.5.2"
redis = "^5.2.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.12.0"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
